--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "description": "A Websocket to SSH2 gateway using term.js, socket.io, ssh2, and express",
   "private": true,
-  "engines": {
-    "node": "0.12.7"
-  },
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "build": "node ./index.js"
+    "start": "node index.js",
+    "build": "node index.js"
   },
   "dependencies": {
     "basic-auth": "^1.0.3",
